# swapi_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs  utils.rs
